# GuardianShield

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  architecture.md  audit.md  configuration.md  contributing.md  faq.md  getting-started.md  index.md  mcp-server.md  profiles.md
docs/.well-known/mcp/: server-card.json
docs/overrides/: main.html
docs/stylesheets/: extra.css
src/guardianshield/: __init__.py  audit.py  baseline.py  ci.py  config.py  content.py  core.py  dedup.py  deep_engine.py  diff.py  engines.py  enrichment.py  feedback.py  findings.py  injection.py  manifest.py  mcp_server.py  osv.py  pii.py  pipeline.py  profiles.py  sarif.py  scanner.py  secrets.py  semantic_engine.py  suppression.py  triage.py
src/guardianshield/patterns/: __init__.py  common.py  csharp.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py
src/guardianshield/profiles/: children.yaml  education.yaml  finance.yaml  general.yaml  healthcare.yaml
tests/: test_audit.py  test_baseline.py  test_ci.py  test_config.py  test_content.py  test_core.py  test_dedup.py  test_deep_engine.py  test_diff.py  test_engines.py  test_enrichment.py  test_feedback.py  test_file_scanning.py  test_findings.py  test_injection.py  test_manifest.py  test_mcp_server.py  test_osv.py  test_patterns.py  test_patterns_csharp.py  test_patterns_go.py  test_patterns_java.py  test_patterns_php.py  test_patterns_ruby.py  test_phase1a_ranges.py  test_pii.py  test_pipeline.py  test_profiles.py  test_remediation.py  test_sarif.py  test_scanner.py  test_secrets.py  test_semantic_engine.py  test_suppression.py  test_triage.py
